💚 测试部署 API Key 的 script
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/.github/workflows/node.prod.deploy.yml
+++ b/.github/workflows/node.prod.deploy.yml
@@ -20,4 +20,6 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        script:  cd Git/DeveloperPortal-FE && git pull && yarn && yarn test && yarn build
+        script: cd Git/DeveloperPortal-FE && git pull
+        script: rm -rf apitoken.json && touch apitoken.json && echo `{ "token": "${{ secrets.API_TOKEN }}" }` > apitoken.json
+        script: yarn && yarn test && yarn build
