--- a/.github/workflows/node.prod.deploy.yml
+++ b/.github/workflows/node.prod.deploy.yml
@@ -20,6 +20,4 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        script: cd Git/DeveloperPortal-FE && git pull
-        script: rm -rf apitoken.json && touch apitoken.json && echo `{ "token": "${{ secrets.API_TOKEN }}" }` > apitoken.json
-        script: yarn && yarn test && yarn build
+        script: cd Git/DeveloperPortal-FE && git pull && rm -rf apitoken.json && touch apitoken.json && echo '{ "token": "${{ secrets.API_TOKEN }}" }' > apitoken.json && yarn && yarn test && yarn build
