💚 修正 CD script 的语法使用错误
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/.github/workflows/node.prod.deploy.yml
+++ b/.github/workflows/node.prod.deploy.yml
@@ -16,8 +16,10 @@ jobs:
     steps:
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.2
+      env: 
+        API_TOKEN: ${{ secrets.API_TOKEN }}
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        script: cd Git/DeveloperPortal-FE && git pull && rm -rf apitoken.json && touch apitoken.json && echo '{ "token": "${{ secrets.API_TOKEN }}" }' > apitoken.json && yarn && yarn test && yarn build
+        script: cd Git/DeveloperPortal-FE && git pull && rm -rf apitoken.json && touch apitoken.json && echo '{ "token": "$API_TOKEN" }' > apitoken.json && yarn && yarn test && yarn build
