--- a/.github/workflows/node.prod.deploy.yml
+++ b/.github/workflows/node.prod.deploy.yml
@@ -22,4 +22,5 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        script: cd Git/DeveloperPortal-FE && git pull && rm -rf apitoken.json && touch apitoken.json && echo '{"token":"$API_TOKEN"}' > apitoken.json && yarn && yarn test && yarn build
+        envs: API_TOKEN
+        script: cd Git/DeveloperPortal-FE && git pull && rm -rf apitoken.json && touch apitoken.json && printf '{"token":"%s"}' "$API_TOKEN" > apitoken.json && yarn && yarn test && yarn build
