--- a/package.json
+++ b/package.json
@@ -47,16 +47,16 @@
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "2.1.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^4.0.0-beta.14",
+    "html-webpack-plugin": "2.30.0",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
@@ -88,10 +88,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^4.43.0",
+    "webpack": "^3.5.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "3.11.0",
+    "webpack-dev-server": "2.9.7",
     "webpack-merge": "^4.1.0"
   },
   "resolutions": {
