--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.27.0",
     "vue": "^2.5.2",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-upload-component": "^2.8.20",
     "vuex": "^3.5.1"
@@ -86,6 +87,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
+    "vue-markdown-loader": "^2.4.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.0",
