--- a/package.json
+++ b/package.json
@@ -98,10 +98,10 @@
   },
   "resolutions": {
     "minimist": "^0.2.1",
-    "serialize-javascript": "^2.1.1",
     "mem": "^4.0.0",
     "js-yaml": "^3.13.1",
-    "growl": "^1.10.0"
+    "growl": "^1.10.0",
+    "serialize-javascript": "^3.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
