--- a/package.json
+++ b/package.json
@@ -101,7 +101,10 @@
     "mem": "^4.0.0",
     "js-yaml": "^3.13.1",
     "growl": "^1.10.0",
-    "serialize-javascript": "^3.1.0"
+    "serialize-javascript": "^3.1.0",
+    "node-forge": "^0.10.0",
+    "yargs-parser": "^13.1.2",
+    
   },
   "engines": {
     "node": ">= 6.0.0",
