--- a/package.json
+++ b/package.json
@@ -103,8 +103,7 @@
     "growl": "^1.10.0",
     "serialize-javascript": "^3.1.0",
     "node-forge": "^0.10.0",
-    "yargs-parser": "^13.1.2",
-    
+    "yargs-parser": "^13.1.2"
   },
   "engines": {
     "node": ">= 6.0.0",
