:green_heart: Bounce ssh-action to master branch
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/.github/workflows/node.prod.deploy.yml
+++ b/.github/workflows/node.prod.deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
     - name: SSH Remote Commands
-      uses: appleboy/ssh-action@v0.1.4
+      uses: appleboy/ssh-action@master
       env: 
         API_TOKEN: ${{ secrets.API_TOKEN }}
       with:
