--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "growl": "^1.10.0",
     "serialize-javascript": "^3.1.0",
     "node-forge": "^0.10.0",
-    "yargs-parser": "^13.1.2"
+    "yargs-parser": "^13.1.2",
+    "highlight.js": "^10.4.1"
   },
   "engines": {
     "node": ">= 6.0.0",
