--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,7 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime", "transform-es2015-modules-commonjs"],
+  "plugins": ["transform-vue-jsx", "transform-runtime", "transform-es2015-modules-commonjs", "syntax-dynamic-import"],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
