--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.27.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.24.4",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-upload-component": "^2.8.20",
@@ -34,6 +35,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
